# tradearena-cc

./: .gitignore  README.md  apprunner.yaml  main.py  pyproject.toml  requirements.txt
cli/: __init__.py  config_manager.py  config_menu.py  logs_menu.py  menu.py  prompt_mode.py  provider_factory.py  setup_menu.py  utils.py  views_menu.py  walrus_menu.py
config/: credentials.env.example  mcp_config.json
core-mcp/: package-lock.json  package.json
core-mcp/src/: config.ts  index.ts  types.ts
core-mcp/src/agent/: index.ts
core-mcp/src/mcp/: index.ts
cronos-mcp/: .env.example  package-lock.json  package.json
cronos-mcp/src/: config.ts  index.ts  types.ts
cronos-mcp/src/agent/: wallet.ts
cronos-mcp/src/constants/: fee-tiers.ts
cronos-mcp/src/contracts/: vvs.ts
cronos-mcp/src/mcp/: index.ts
cronos-mcp/src/utils/: cronos_analytics.ts  vvs-analytics.ts
global-dashboard/: package-lock.json  package.json
global-dashboard/app/: globals.css  layout.tsx  page.tsx  providers.tsx  wrapper.tsx
global-dashboard/app/arena/: page.tsx
kaia-mcp/: .env.example  package-lock.json  package.json
kaia-mcp/src/: config.ts  index.ts  types.ts
server/: __init__.py  agents.py  app.py  data.py  mcp_manager.py  routes.py  sessions.py  settings.py  static.py  templates.py  utils.py  views_manager.py
server/templates/: __init__.py  agents.py  base.py  interactive.py  main.py  settings.py  views.py  walrus.py
server/tools/: __init__.py  views.py  weather.py
sui-mcp/: package-lock.json  package.json
sui-mcp/src/: config.ts  index.ts  types.ts
(+110 files in other folders)
