[tool.poetry]
name = "tradearena-demo-agent"
version = "0.1.0"
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.122.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
strands-agents = {extras = ["anthropic", "gemini", "openai"], version = "^1.18.0"}
strands-agents-tools = "^0.2.0"
boto3 = "^1.41.0"